Finished Spanish translations except for news stories. Fixed active btn class applications (for real this time). Fixed responsive image sizing for news story previews on index page for desktop view.

--- a/languages/en.json
+++ b/languages/en.json
@@ -79,6 +79,55 @@
     "compost-p3": "If you would like to know more about compost or help out contact us at <b>pvcg.compost@gmail.com</b>",
 
     "membership-application": "Membership Application",
-    "membership-p1": "To apply for garden membership, please fill out the form below!"
+    "membership-p1": "To apply for garden membership, please fill out the form below!",
+
+    "upcoming-events": "Upcoming Events",
+    "no-events-atm": "No events at the moment.",
+
+    "member-responsibilities": "Garden Member Responsibilities",
+    "responsibilities1": "Every garden needs the participation of all members to keep it in good shape. Pleasant Village Community Garden is no exception. We ask that members consider the following and not leave these responsibilities to others:",
+    "responsibilities2": "Garbage & Recyclables:",
+    "responsibilities3": "Garbage & recycle bags are to be used only for garbage derived from cleaning the sidewalks, garbage that blows in the garden, or full garden events. All other garbage (personal barbecues, organizations that use the garden, picnic lunches etc.) must be carried out with you. No exceptions. Bring full garbage & recyclable bags to the front of the garden whether you or someone else have/has filled the garbage bag. Our Vice President, Carlos Melendez will make sure they get to the sanitation truck. Our sanitation men are great and willingly take our garbage. Please make sure the garbage bags are not too heavy. Be frugal with the bags – they cost money and they increase unwanted solid waste.",
+    "responsibilities4": "If you see litter outside or inside the garden or by the trees on Pleasant Avenue or near the 119th Street fence, pick it up and put it in the garbage, even if it is not your assigned duty. Every member’s hands are the same in the garden.",
+    "responsibilities5": "Water Barrels:",
+    "responsibilities6": "Fill the water barrels when they are empty.​",
+    "responsibilities7": "Make sure to lock the garden properly when you leave.",
+    "responsibilities8": "No smoking in the garden. No pets allowed. Service dogs are welcome.",
+    "responsibilities9": "Contact Person:",
+    "responsibilities10": "The garden has a contact person so that organizations do not have numerous people contacting them that may not have the authority to do so. If you have a concern and would like to contact someone on behalf of the garden, please contact the Garden President (Kim – pleasantvillagegarden@gmail.com).",
+    "responsibilities11": "Take part in garden events by donating time, items or funds. We are part of Green Thumb, New York City Department of Parks and Recreation. Put yourself on the mailing list for Green Thumb events. http://www.greenthumbnyc.org/index.php. Please volunteer to the Green Thumb ‘give-aways,’ Contact Garden President Kim – pleasantvillagegarden@gmail.com",
+
+    "open-hrs1": "During open hours, everyone is welcome to visit the garden!",
+    "open-hrs2": "Open hours are every Saturday and Sunday from <b>1 to 6pm</b>, starting in early April and ending in late October.",
+
+    "garden-member-requirements": "Garden Member Requirements",
+    "gmr1": "The rules and responsibilities below are for all garden members. We are all volunteers who pay a nominal fee of $10 a year to be a member of Pleasant Village Community Garden. These responsibilities come with membership. If you are unsure whether you are willing to adhere to these rules & carry out these responsibilities, other gardens may better suited for your needs.",
+    "gmr2": "1. Membership fees are due at the last meeting of the gardening season for returning members. If you do not pay then, you will lose your plot that day to someone else who is waiting for a plot.",
+    "gmr3": "2. Members are responsible for keeping up to date on garden rules, their open hour times, and garden meeting dates and times.",
+    "gmr4": "3. Members are responsible for removing or scheduling removal of large trash or recyclable items with Department of Sanitation (DSNY) or by calling 311 for special pick-ups.",
+    "gmr5": "4. No dogs allowed unless it is a certified service dog.",
+    "gmr6": "5. Pack your trash out. Garbage and recycling bags are for trash and/or recyclables removed from compost drop-off bin and cleaned from sidewalk or inside garden fence.",
+    "gmr7": "6. Plots may not be assigned or transferred to someone else by garden members. Officers will assign plots according to a chronological waiting list.",
+    "gmr8": "7. Garden cages are allowed to prevent squirrels from taking produce. Limit any structure height to 5.5 ft.",
+    "gmr9": "8. Make sure you are not blocking your garden neighbors’ sunlight. If it looks like you are taking away someone's sunlight, don’t do it.",
+    "gmr10": "9. Smoking in the garden is prohibited.",
+    "gmr11": "10. Garden keys are assigned. Do not duplicate garden keys.",
+    "gmr12": "11. Members must hold at least 4 hours of open hours and sometimes more to cover the hours we have listed as being open. The garden should be open 20 hours a week, with 10 listed hours.",
+    "gmr13": "12. Members are responsible for making sure they know the rules and bylaws. A shared google drive folder for members contains pertinent information.",
+    "gmr14": "13. Taking produce from other plots is prohibited (unless the person has given you permission).",
+    "gmr15": "14. Garden tools & supplies should not leave the garden beyond the sidewalk (so you can shovel snow).",
+    "gmr16": "15. Eggs are available for purchase by garden members and the public (.25 for 1, $1.00 for 4)",
+    "gmr17": "16. Any supplies are not for the taking unless an officer tells you they are for the taking and how much you can take.",
+    "gmr18": "17. Pick up trash when you see it, even it is not yours.",
+    "gmr19": "18. Water the trees when they need it.",
+
+    "welcome-to-pvcg": "Welcome to Pleasant Village Community Garden!",
+    "wtpvcg1": "Pleasant Village Community Garden, Inc.* (PVCG) is a beautiful oasis in East Harlem. Founded by the late Rose M. Gardella between 1978 and 1982, PVCG rests on the rubble of several buildings destroyed by fire.",
+    "wtpvcg2": "In 1997, PVCG officially became parkland and part of the New York City Department of Parks and Recreation. In 1993, Green Thumb designated PVCG a preservation site.",
+    "wtpvcg3": "PVCG has ethnically diverse members of varying ages. Members care for their own individual plots, where they grow vegetables, flowers and herbs, as well as the communal herb, rose, berry and ornamental gardens and various fruit trees (apple, pear, peach, mulberry). We also specialize in planting pollinator and native plants to attract and provide host plants for pollinator butterflies and bees.",
+    "wtpvcg4": "PVCG is supported by and follows the rules of Green Thumb. The official open season for PVCG is from early April to late October, but PVCG also holds events during the winter months.",
+    "wtpvcg5": "Come join us as a member or to spend a nice afternoon under the pink shade of the cherry blossom trees. Enjoy the songs of the birds that call PVCG home and the smells of the roses.",
+    "wtpvcg6": "To be come a member, volunteer for a day and attend one of the three annual meetings.  For more information contact <b>pleasantvillagegarden@gmail.com</b>",
+    "wtpvcg7": "*Please note that all images are belong to Copyright PVCG © or its members. Any image of the garden is explicitly for the use of the garden or personal use unless permission is granted by contacting us at the email above. PVCG is part of NYCPR & Green Thumb only. We are not part of any other organization."
 
 }
